--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.23",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
