--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
